public interface MakeCoffee {
    void makeCoffee();
}
