package product;

public class Cappuccino implements MakeCoffee{
    @Override
    public void makeCoffee() {
        System.out.println("Your Cappuccino. Enjoy!");
    }
}
