package product;

public class Espresso implements MakeCoffee{
    @Override
    public void makeCoffee() {
        System.out.println("Your product.Espresso. Enjoy!");
    }
}
