package product;

public class Latte implements MakeCoffee{
    @Override
    public void makeCoffee() {
        System.out.println("Your Latte. Enjoy!");
    }
}
